fix: resolve restart loop and add NOTIFY_CHAT_ID feature
Restart Loop Fix:
- Use Pyrogram's idle() instead of custom wait_for_shutdown()
- idle() properly handles signals and keeps connection alive
- Fixed asyncio.Event() creation outside of event loop
- Added socket error suppression in exception handler
- Simplified main() function

NOTIFY_CHAT_ID Feature:
- Added NOTIFY_CHAT_ID option to specify notification destination
- Can be: @username, channel/group ID, or user ID
- If empty, defaults to Saved Messages (NOTIFY_USER_ID)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ API_HASH=your_api_hash_here
 # معرّف المستخدم للإشعارات (استخدم @userinfobot للحصول عليه)
 NOTIFY_USER_ID=your_user_id_here
 
+# وجهة إرسال الإشعارات (اختياري)
+# يمكن أن يكون:
+# - username قناة أو مجموعة: @MyChannel أو @MyGroup  
+# - معرّف رقمي للقناة/المجموعة: -1001234567890
+# - معرّف رقمي لشخص: 123456789
+# إذا تُرك فارغاً، سيتم إرسال الإشعارات إلى Saved Messages
+NOTIFY_CHAT_ID=
+
 # اسم ملف الجلسة
 SESSION_NAME=my_account
 
