refactor: translate all Arabic text to English
- Translated README.md: all sections, features, instructions, and documentation
- Translated Python files: docstrings, comments, and user-facing messages
  - logger.py, config.py, exporter.py, notifications.py, search_engine.py
  - bot.py: all button labels, menu texts, help messages, status messages
  - channel_monitor.py: code comments
  - dashboard/app.py: error messages
- Translated HTML templates: all dashboard interface text
  - base.html, index.html, channels.html, keywords.html
  - messages.html, stats.html, login.html
- Translated config files: .env.example, .gitignore comments
- Removed Arabic words from regex patterns (search_engine.py)
- Changed HTML lang and dir attributes from 'ar'/'rtl' to 'en'/'ltr'

All functionality preserved. Project now fully internationalized in English.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# البيئة والإعدادات الحساسة
+# Environment and sensitive settings
 .env
 *.session
 *.session-journal
@@ -38,7 +38,7 @@ env/
 *.swo
 *~
 
-# قاعدة البيانات
+# Database
 *.db
 *.sqlite3
 data/
@@ -50,5 +50,5 @@ logs/
 .DS_Store
 Thumbs.db
 
-# التصدير
+# Exports
 exports/
