--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,38 @@
-# مثال على ملف الإعدادات - انسخه إلى .env وعدّل القيم
+# Settings file example - copy this to .env and modify the values
 
 # Telegram API Credentials
-# احصل عليها من https://my.telegram.org
+# Get them from https://my.telegram.org
 API_ID=your_api_id_here
 API_HASH=your_api_hash_here
 
-# معرّف المستخدم للإشعارات (استخدم @userinfobot للحصول عليه)
+# User ID for notifications (use @userinfobot to get it)
 NOTIFY_USER_ID=your_user_id_here
 
-# وجهة إرسال الإشعارات (اختياري)
-# يمكن أن يكون:
-# - username قناة أو مجموعة: @MyChannel أو @MyGroup  
-# - معرّف رقمي للقناة/المجموعة: -1001234567890
-# - معرّف رقمي لشخص: 123456789
-# إذا تُرك فارغاً، سيتم إرسال الإشعارات إلى Saved Messages
+# Notification destination (optional)
+# Can be:
+# - username of channel or group: @MyChannel or @MyGroup  
+# - numeric ID of channel/group: -1001234567890
+# - numeric ID of person: 123456789
+# If left empty, notifications will be sent to Saved Messages
 NOTIFY_CHAT_ID=
 
-# اسم ملف الجلسة
+# Session file name
 SESSION_NAME=my_account
 
-# إعدادات البوت (اختياري - احصل على التوكن من @BotFather)
+# Bot settings (optional - get token from @BotFather)
 BOT_TOKEN=your_bot_token_here
 
-# إعدادات Discord (اختياري)
+# Discord settings (optional)
 DISCORD_WEBHOOK_URL=
 
-# إعدادات البريد الإلكتروني (اختياري)
+# Email settings (optional)
 EMAIL_SMTP_SERVER=smtp.gmail.com
 EMAIL_SMTP_PORT=587
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_TO=
 
-# إعدادات لوحة التحكم
+# Dashboard settings
 DASHBOARD_SECRET_KEY=change_this_to_a_random_secret_key
 DASHBOARD_PORT=5000
 DASHBOARD_HOST=127.0.0.1
